# pet-deanonymization

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: Landmark_matching.ipynb  Results_Denoising.ipynb
scripts/: calculate_metrics_nondeep_denoising.py  perform_crossval.py  perform_landmark_matching.py  perform_landmark_placement.py  perform_morphological_reconstruction.py
src/pet2face/net/: data.py  nets.py  trainers.py  unet_blocks.py
src/pet2face/reconstruction/: landmarks.py  utils.py
